--- a/GeneAccordPKG/DESCRIPTION
+++ b/GeneAccordPKG/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: GeneAccord
 Type: Package
-Title: Statistical Test for Clonal Exclusivity in Tumour Evolution
-Version: 1.0.0
+Title: Statistical Tests for Clonal Exclusivity and Co-occurrence in Tumour Evolution
+Version: 1.1.0
 Author: Jack Kuipers, Ariane L. Moore
 Maintainer: Jack Kuipers <jack.kuipers@bsse.ethz.ch>
 Description: This R package has functions to detect clonal exclusivity or co-occurrence patterns of altered genes or pathways in a cohort of cancer patients. Such clonally exclusive gene pairs may uncover synergies between co-existing clones.
